# asyncio-parsing

asyncio-parsing/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
asyncio-parsing/asyncio_parsing/: checking_redis.py  main.py  redis_test.py  redising.py
